Collapsed edit page toolbar squashed icons- Bug #1515389
behatnotneeded

(cherry picked from commit 1e6c4a76b86601e2b09e3be867809cdf191e7261)

--- a/htdocs/theme/raw/sass/components/_btn.scss
+++ b/htdocs/theme/raw/sass/components/_btn.scss
@@ -255,6 +255,7 @@ td.btn-group {
             max-width: 100%;
             overflow: hidden;
             width:100%;
+            min-width: 60px;
             &.ui-accordion-header {
                  margin-bottom: -3px;
             }
